feat: modularize RAG pipeline and add triage system
- Split EmergencyKnowledgeBase into focused components (ProtocolRegistry, SemanticEngine, LuceneIndexManager, KnowledgeGraphManager, EmergencySearcher, VectorMath)
- Extract InferenceEngine, ChatViewManager and SessionCoordinator from ChatController
- Split BootstrapService into BootstrapState and ProvisioningManager
- Add TriageService for dynamic intent classification with stress test harness